--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=SmartDiagnostics
+
+#MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/smrt
+spring.datasource.username=smrt
+spring.datasource.password=smrt
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=rabbit
+spring.rabbitmq.password=rabbit
