--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=SmartDiagnostics
+
+#MySQL
+spring.datasource.url=jdbc:mysql://<DB_URL>
+spring.datasource.username=***REMOVED***
+spring.datasource.password=***REMOVED***
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#RabbitMQ
+spring.***REMOVED***mq.host=***REMOVED***
+spring.***REMOVED***mq.port=5672
+spring.***REMOVED***mq.username=***REMOVED***
+spring.***REMOVED***mq.password=***REMOVED***
