Security settings I forgot to add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=rabbit
 spring.rabbitmq.password=rabbit
+
+#Security :)
+spring.security.user.name=smrtdev
+spring.security.user.password=chatgpt
