Dump (verification unfinished)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ spring.***REMOVED***mq.password=***REMOVED***
 #Security :)
 spring.security.user.name=***REMOVED***dev
 spring.security.user.password=***REMOVED***
+
+#Mail smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=***REMOVED***
+spring.mail.username=***REMOVED***
+spring.mail.password=***REMOVED***
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
