Dump (verification unfinished)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ spring.rabbitmq.password=rabbit
 #Security :)
 spring.security.user.name=smrtdev
 spring.security.user.password=chatgpt
+
+#Mail smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=galian2002@gmail.com
+spring.mail.password=idaa knpa lxkb nrqq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
