--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.security.user.password=***REMOVED***
 #Mail smtp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=***REMOVED***
-spring.mail.password=***REMOVED***
+spring.mail.username=<username>
+spring.mail.password=<password>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
