--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,9 @@ spring.security.user.name=***REMOVED***dev
 spring.security.user.password=***REMOVED***
 
 #Mail smtp
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp-mail.outlook.com
 spring.mail.port=587
-spring.mail.username=<username>
-spring.mail.password=<password>
+spring.mail.username=***REMOVED***diag@outlook.com
+spring.mail.password=***REMOVED***
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
