--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.security.user.password=chatgpt
 #Mail smtp
 spring.mail.host=smtp-mail.outlook.com
 spring.mail.port=587
-spring.mail.username=smrtdiag@outlook.com
-spring.mail.password=GalingasSlaptazodi$1
+spring.mail.username=<username>
+spring.mail.password=<password>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
