--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,9 @@ spring.mail.username=***REMOVED***diag@outlook.com
 spring.mail.password=***REMOVED***
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#ChatGPT
+***REMOVED***.model=gpt-3.5-turbo
+***REMOVED***.key=***REMOVED***
+***REMOVED***.assistants=https://api.openai.com/v1/assistants
+***REMOVED***.threads=https://api.openai.com/v1/threads
