--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,16 @@ spring.security.user.password=***REMOVED***
 #Mail smtp
 spring.mail.host=***REMOVED***
 spring.mail.port=***REMOVED***
-spring.mail.username=<username>
-spring.mail.password=<password>
+spring.mail.username=***REMOVED***diag@outlook.com
+spring.mail.password=***REMOVED***
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#ChatGPT
+***REMOVED***.model=gpt-3.5-turbo
+***REMOVED***.key=***REMOVED***
+***REMOVED***.assistants=https://api.openai.com/v1/assistants
+***REMOVED***.threads=https://api.openai.com/v1/threads
+
+#BASE_IP
+BASE_IP=78.57.127.146
