--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=SmartDiagnostics
 
 #MySQL
-spring.datasource.url=jdbc:mysql://<DB_URL>
-spring.datasource.username=***REMOVED***
-spring.datasource.password=***REMOVED***
+spring.datasource.url=jdbc:mysql://${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PWRD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Hibernate
@@ -12,28 +12,31 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #RabbitMQ
-spring.***REMOVED***mq.host=***REMOVED***
-spring.***REMOVED***mq.port=5672
-spring.***REMOVED***mq.username=***REMOVED***
-spring.***REMOVED***mq.password=***REMOVED***
+spring.rabbitmq.host=${RABBIT_HOST}
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=${RABBIT_USER}
+spring.rabbitmq.password=${RABBIT_PWRD}
 
 #Security :)
-spring.security.user.name=***REMOVED***dev
-spring.security.user.password=***REMOVED***
+spring.security.user.name=${SECURITY_NAME}
+spring.security.user.password=${SECURITY_PWRD}
 
 #Mail smtp
 spring.mail.host=smtp-mail.outlook.com
 spring.mail.port=587
-spring.mail.username=***REMOVED***diag@outlook.com
-spring.mail.password=***REMOVED***
+spring.mail.username=${SMTP_USER}
+spring.mail.password=${SMTP_PWRD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ChatGPT
-***REMOVED***.model=gpt-3.5-turbo
-***REMOVED***.key=***REMOVED***
-***REMOVED***.assistants=https://api.openai.com/v1/assistants
-***REMOVED***.threads=https://api.openai.com/v1/threads
+smrt.model=${GPT_MODEL}
+smrt.key=${GPT_KEY}
+smrt.assistants=https://api.openai.com/v1/assistants
+smrt.threads=https://api.openai.com/v1/threads
 
 #BASE_IP
-BASE_IP=78.57.127.146
+BASE_IP=${HOST_IP}
+
+SMTP_USER=${SMTP_USER}
+SMTP_PWRD=${SMTP_PWRD}
