--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Setup Environment Variables
       run: |
-        echo "${{ secrets.properties }}" > env.properties
+        echo "${{ secrets.properties }}" > src/main/resources/env.properties
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
