--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,11 +39,11 @@ jobs:
     - name: Connect to MySQL
       run: |
           # mysql --host=`${{ secrets.DB_URL }}` --port=`${{ secrets.DB_PORT }}` --user=`${{ secrets.DB_USER }}` --password=`${{ secrets.DB_PWRD }}` `${{ secrets.DB_NAME }}`
-          echo "DB_HOST: ${{ env.DB_URL }}"
-          echo "DB_PORT: ${{ env.DB_PORT }}"
-          echo "DB_USER: ${{ env.DB_USER }}"
-          echo "DB_PASSWORD: ${{ env.DB_PASSWORD }}"
-          echo "DB_NAME: ${{ env.DB_NAME }}"
+          echo "DB_HOST: ${{ secrets.DB_URL }}"
+          echo "DB_PORT: ${{ secrets.DB_PORT }}"
+          echo "DB_USER: ${{ secrets.DB_USER }}"
+          echo "DB_PASSWORD: ${{ secrets.DB_PASSWORD }}"
+          echo "DB_NAME: ${{ secrets.DB_NAME }}"
 
     - name: Create database and user
       run: |
