--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,14 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
+
+    - name: My first action
+      env:
+          DB_HOST: ${{ secrets.DB_URL }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PWRD: ${{ secrets.DB_PWRD }}
+          DB_NAME: ${{ secrets.DB_NAME }}
     
     - name: Install MySQL client
       run: sudo apt-get install mysql-client
@@ -39,11 +47,11 @@ jobs:
     - name: Connect to MySQL
       run: |
           # mysql --host=`${{ secrets.DB_URL }}` --port=`${{ secrets.DB_PORT }}` --user=`${{ secrets.DB_USER }}` --password=`${{ secrets.DB_PWRD }}` `${{ secrets.DB_NAME }}`
-          echo "DB_HOST: ${{ secrets.DB_URL }}"
-          echo "DB_PORT: ${{ secrets.DB_PORT }}"
-          echo "DB_USER: ${{ secrets.DB_USER }}"
-          echo "DB_PASSWORD: ${{ secrets.DB_PASSWORD }}"
-          echo "DB_NAME: ${{ secrets.DB_NAME }}"
+          echo DB_HOST
+          echo DB_PORT
+          echo DB_USER
+          echo DB_PWRD
+          echo DB_NAME
 
     - name: Create database and user
       run: |
