--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,12 @@ jobs:
           DB_USER: ${{ secrets.DB_USER }}
           DB_PWRD: ${{ secrets.DB_PWRD }}
           DB_NAME: ${{ secrets.DB_NAME }}
+      run: |
+        echo DB_HOST
+        echo DB_PORT
+        echo DB_USER
+        echo DB_PWRD
+        echo DB_NAME
     
     - name: Install MySQL client
       run: sudo apt-get install mysql-client
@@ -47,11 +53,6 @@ jobs:
     - name: Connect to MySQL
       run: |
           # mysql --host=`${{ secrets.DB_URL }}` --port=`${{ secrets.DB_PORT }}` --user=`${{ secrets.DB_USER }}` --password=`${{ secrets.DB_PWRD }}` `${{ secrets.DB_NAME }}`
-          echo DB_HOST
-          echo DB_PORT
-          echo DB_USER
-          echo DB_PWRD
-          echo DB_NAME
 
     - name: Create database and user
       run: |
