--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,27 +33,13 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
-
-    - name: My first action
-      env:
-        echo "DB_HOST: ${{ secrets.DB_URL }}"
-        echo "DB_PORT: ${{ secrets.DB_PORT }}"
-        echo "DB_USER: ${{ secrets.DB_USER }}"
-        echo "DB_PASSWORD: ${{ secrets.DB_PASSWORD }}"
-        echo "DB_NAME: ${{ secrets.DB_NAME }}"
-      run: |
-        echo "DB_HOST"
-        echo "DB_PORT"
-        echo "DB_USER"
-        echo "DB_PWRD"
-        echo "DB_NAME"
     
     - name: Install MySQL client
       run: sudo apt-get install mysql-client
               
     - name: Connect to MySQL
       run: |
-          # mysql --host=`${{ secrets.DB_URL }}` --port=`${{ secrets.DB_PORT }}` --user=`${{ secrets.DB_USER }}` --password=`${{ secrets.DB_PWRD }}` `${{ secrets.DB_NAME }}`
+          mysql --host=`${{ secrets.DB_URL }}` --port=`${{ secrets.DB_PORT }}` --user=`${{ secrets.DB_USER }}` --password=`${{ secrets.DB_PWRD }}`
 
     - name: Create database and user
       run: |
