--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -17,55 +9,41 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: env
-    # services:
-    #   mysql:
-    #     image: mysql:5.7
-    #     env:
-    #       MYSQL_ROOT_PASSWORD: password
-    #     ports:   
-    #       - 3306:3306
-    #     options: >-
-    #       --health-cmd "mysqladmin ping --user=root --password=password --silent"
-    #       --health-interval 10s
-    #       --health-timeout 10s
-    #       --health-retries 5
+    env:
+      DB_URL: ${{ secrets.DB_URL }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PWRD: ${{ secrets.DB_PWRD }}
+      PROPERTIES: ${{ secrets.properties }}
+    
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
-    
+
     - name: Install MySQL client
       run: sudo apt-get install mysql-client
-              
+    
     - name: Connect to MySQL
-      env:
-          DB_URL: ${{secrets.DB_URL}}
-          DB_PORT: ${{secrets.DB_PORT}}
-          DB_USER: ${{secrets.DB_USER}}
-          DB_PWRD: ${{secrets.DB_PWRD}}
       run: |
-          mysql --host="$DB_URL" --port="$DB_PORT" --user="$DB_USER" --password="$DB_PWRD"
+        mysql --host="$DB_URL" --port="$DB_PORT" --user="$DB_USER" --password="$DB_PWRD" -e "SELECT 1"
 
     - name: Create database and user
       run: |
-          mysql -h "$DB_URL" -P "$DB_PORT" -u "$DB_USER" --password="$DB_PWRD" -e "
-            CREATE DATABASE IF NOT EXISTS smrt;
-            CREATE USER 'smrt'@'%' IDENTIFIED BY 'smrt';
-            GRANT ALL PRIVILEGES ON smrt.* TO 'smrt'@'%';
-            FLUSH PRIVILEGES;"
-    - uses: actions/checkout@v3
+        mysql -h "$DB_URL" -P "$DB_PORT" -u "$DB_USER" --password="$DB_PWRD" -e "
+          CREATE DATABASE IF NOT EXISTS smrt;
+          CREATE USER IF NOT EXISTS 'smrt'@'%' IDENTIFIED BY 'smrt';
+          GRANT ALL PRIVILEGES ON smrt.* TO 'smrt'@'%';
+          FLUSH PRIVILEGES;"
+
     - name: Setup Environment Variables
-      run: |
-        echo "${{ secrets.properties }}" > src/main/resources/env.properties
+      run: echo "$PROPERTIES" > src/main/resources/env.properties
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
