--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,8 @@ jobs:
       DB_USER: ${{secrets.DB_USER}}
       DB_PWRD: ${{secrets.DB_PWRD}}
       PROPERTIES: ${{secrets.properties}}
-    
+      MYSQL_ROOT_PASSWORD: password
+      
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
@@ -37,8 +38,7 @@ jobs:
     
     - name: Connect to MySQL
       run: |
-        curl "$DB_URL" -I
-        mysql --host="$DB_URL" --port="$DB_PORT" --user="$DB_USER" --password="$DB_PWRD" --protocol=TCP
+        mysql --host="$DB_URL" --port="$DB_PORT" --user="$DB_USER" --password="$MYSQL_ROOT_PASSWORD"
 
     - name: Create database and user
       run: |
