--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,6 +39,7 @@ jobs:
     - name: Connect to MySQL
       run: |
         systemctl status mysql
+        sudo systemctl start mysql
         mysql --host="$DB_URL" --port="$DB_PORT" --user="$DB_USER" --password="$MYSQL_ROOT_PASSWORD"
 
     - name: Create database and user
