--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.config.import=classpath:env.properties
 spring.application.name=SmartDiagnostics
 
 #MySQL
-spring.datasource.url=jdbc:mysql://${DB_URL}/${DB_USER}
+spring.datasource.url=jdbc:mysql://${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PWRD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
