--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,15 +48,15 @@ jobs:
 
     - name: Setup Environment Variables
       run: |
-        echo "$PROPERTIES" > src/main/resources/env.properties
+        # echo "$PROPERTIES" > src/main/resources/env.properties
         echo "$PROPERTIES"
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+    # - name: Set up JDK 17
+    #   uses: actions/setup-java@v3
+    #   with:
+    #     java-version: '17'
+    #     distribution: 'temurin'
+    #     cache: maven
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    # - name: Build with Maven
+    #   run: mvn -B package --file pom.xml
