--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Connect to MySQL
       run: |
         sudo systemctl start mysql
-        sudo mysql --host="127.0.0.1" --port="3306" --user="root" --password="root"
+        sudo mysql --host="127.0.0.1" --port="3306" --user="root" --password="root" --protocol=TCP
 
     - name: Create database and user
       run: |
